--- a/webapp/web/islr/index.html
+++ b/webapp/web/islr/index.html
@@ -18,9 +18,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic/holistic.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="web/islr/particles.js"></script>
 </head>
 
 <body>
+    <div id="particles-js"></div>
     <div class="content">
         <!-- Header Section -->
         <header class="header">
@@ -334,6 +336,7 @@
 
         <!-- Main Content -->
         <main>
+            
             <button id="camButton" class="btn">Loading Model...</button>
             <div class="camView">
                 <video class="input_video" autoplay playsinline></video>
